LOG:
20090330 - 0.1.0 first very early release, the daemon compiles and run, but is
           useless

TODO:
2009032901
liblixacommon is compiled with POSIX thread enabled; when a non POSIX
thread enable version of "client" will be released, liblixacommon must be
double compiled (single and multithread)

2009040101
lixad command line should be able to specify a custom config file instead of
default system configuration file; server_config() is already enabled

2009040701
lixad_conf.xml should be validated against a DTD or a schema to detect
malformed configuration files

2009040702
lixad should be able to run as a console process, not only as a daemon, for
debug purpouses. It's sufficient to skip "daemonize()" function and it seems
all works in console environment

2009051201
client status collection index could use a double array instead of allocating
and freeing the array every time insert/delete operation is asked

2009051401
a client that performs a lot of tx_open/tx_close can saturate all the available
TCP/IP connection and "connect" functions fail.
SO_LINGER could be a "solution", but this may generate different issues as
W. Richard Stevens explained in "UNIX network programming".
